--- a/pom.xml
+++ b/pom.xml
@@ -65,15 +65,15 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-jackson</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.quarkiverse.minio</groupId>
-            <artifactId>quarkus-minio</artifactId>
-            <version>3.7.3</version>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkiverse.amazonservices</groupId>
-            <artifactId>quarkus-amazon-s3</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.quarkiverse.minio</groupId>-->
+<!--            <artifactId>quarkus-minio</artifactId>-->
+<!--            <version>3.7.3</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.quarkiverse.amazonservices</groupId>-->
+<!--            <artifactId>quarkus-amazon-s3</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-jdbc-postgresql</artifactId>
