--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.hibernate-orm.database.generation=drop-and-create
 
+quarkus.datasource.username = postgres
+quarkus.datasource.password = mypassword
+quarkus.http.cors=true
+%dev.quarkus.http.cors.origins=*
